linphone-3.8.5 -- June 30th, 2015
	* Fix bug about status icon on MacOSX. Attention request worked only once
	* Fix crash at the end of the audio assistant
	* Fix crash when configuring a remote provisioning
	* Fix regression in the codec view. Codec which are not usable because
	  bandwidth limits are to low were not greyed anymore
	* Fix language selection on Windows and MacOSX
	* Add translation for 'Arabic' and 'Turkish' items in the language selection
	  list

linphone-3.8.4 -- June 9th, 2015
	* Add a built-in XMLRPC client. Linphone does not depend on libsoup anymore

linphone-3.8.3 -- June 4th, 2015
	* Fix status icons on all platforms (Windows, MacOS, non-KDE Linux desktop environment)

linphone-3.8.2 -- May 7th, 2015
	Application level improvements:
	* add support of the StatusNotifierItem standard to display a status icon on KDE5
	* auto-answering can be set through the preferences panel
	* bug fixes
	
	Liblinphone level improvements:
	* fix audio bug with opus codec
	* fix ICE corner case not properly handled and resulting bad final ice status
	* update SO version to 7 (it should have been done in 3.8.0)
	* bug fixes

linphone-3.8.1 -- March 31th, 2015
	Application level improvements:
	* Auto-answer ability
	* Improvement of UI appearance on Mac OSX
	* Bug fixes

linphone-3.8.0 -- March 11th, 2015
	Application level improvements:
	* The video window has now controls in order to switch fullscreen mode and terminate call.
	* The out of call video preview feature (to test camera) is moved into the settings and is no longer linked to the in-call video preview feature.
	* Add an assistant to help users to set audio/video parameters
	* Some ergonomics improvments (checkbox to set random port for UDP and TCP, ...)
	* Lots of updated translations. Arabic translation has been added
	* Experimental feature: play an MKV file by drag-and-dropping it on the video call window

	Liblinphone level improvements: